Corregir enllaços a imatges

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,8 +1,8 @@
 <!-- Traducció de https://github.com/chesterhow/tale/blob/master/_includes/navigation.html -->
 <nav class="nav">
   <div class="nav-container">
-    <img src="/assets/f-violi-e-xs.png" style="height: 2em; position: absolute; left: -2em;" >
-    <img src="/assets/f-violi-d-xs.png" style="height: 2em; position: absolute; right: -2em;" >
+    <img src="{{ '/assets/f-violi-e-xs.png' | prepend: site.baseurl }}" style="height: 2em; position: absolute; left: -2em;" >
+    <img src="{{ '/assets/f-violi-d-xs.png' | prepend: site.baseurl }}" style="height: 2em; position: absolute; right: -2em;" >
     <a href="{{ site.baseurl }}/">
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
