--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="catalogue">
-  <img src="../assets/violi-partitura-h.png" alt="Freqüència simple" style="width: 100%;" />
+  <img src="{{ '/assets/violi-partitura-h.png' | prepend: site.baseurl }}" alt="Freqüència simple" style="width: 100%;" />
   <p style="font-size: .5rem; text-decoration-color: none;">Foto: <a href="https://foto.wuestenigel.com/wooden-violin-scroll-with-notes-on-the-sheet-music/" target="_blank" style="color: #555;">Wooden Violin Scroll with Notes on the sheet music</a> per <a href="https://linktr.ee/wuestenigel" target="_blank" style="color: #555;">Marco Verch</a> sota <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank" style="color: #555;">Creative Commons 2.0</a></p>
 
   {% for post in site.posts %}
