Corregir 'sobre mi'

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     <ul>
       <li><a href="{{ site.baseurl }}/">Entrades</a></li>
       <li><a href="{{ '/tags' | prepend: site.baseurl }}">Temes</a></li>
-      <li><a href="{{ '/about' | prepend: site.baseurl }}">Sobre mi</a></li>
+      <li><a href="{{ '/jo' | prepend: site.baseurl }}">Qui sóc?</a></li>
     </ul>
 
   </div>
