--- a/assets/extra.css
+++ b/assets/extra.css
@@ -1,5 +1,5 @@
 p.figcaption { 
-	font-size: .6rem;
+	font-size: .7rem;
 	text-align:center;
 }
 
@@ -14,4 +14,9 @@ table td, table th {
 
 table {
 	margin-bottom: 1rem;
+}
+
+div.music svg {
+	display: block;
+	margin: 0 auto 0.5rem;;
 }
