Publica des d'Obsidian
Això es carrega tots els permalinks anteriors, però suposo que ara mateix no està ni indexat...

Per què se'ls carrega? Perquè vull una estructura d'enllaços que funcioni igual en local a Obsidian que a la web generada per Jekyll. Així, per exemple, no vull cad posst en una carpeta YYYY-MM-dd i, per tant, no vull urls dels posts de la forma YYYY-MM-dd/titol.

--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -1,10 +1,23 @@
 ---
 layout: post
 ---
-
+<script src="{{ site.baseurl }}/assets/abcjs-basic-min.js" type="text/javascript"></script>
 <script src="{{ site.baseurl }}/assets/js/musicapp.js"></script>
 {{content}}
 <script type="text/javascript">
   const {renderAll} = require('musicapp');	
+  // const {abcjs} = require('abcjs-basic-min');
   renderAll('code.language-music', 0.8);	
+
+  var visualOptions = {  };
+  Array
+  .from(document.querySelectorAll('code.language-music-abc'))
+  .forEach(element => {
+    const score = element.textContent || '';
+    const div = document.createElement('div');
+    div.setAttribute("class", "music");
+    element.parentElement?.replaceChild(div, element);
+    console.log("ABCJS: ", ABCJS);
+    var visualObj = ABCJS.renderAbc(div, score, visualOptions);
+  });
 </script>
