--- a/assets/extra.css
+++ b/assets/extra.css
@@ -20,3 +20,16 @@ div.music svg {
 	display: block;
 	margin: 0 auto 0.5rem;;
 }
+
+
+li:target {
+    animation: highlight 3s ease-in-out;
+}
+@keyframes highlight {
+    from {
+        background-color: rgb(253 224 71);
+    }
+    to {
+        background-color: inherit;
+    }
+}
